--- a/apps/frontend/modules/instructor/config/generator.yml
+++ b/apps/frontend/modules/instructor/config/generator.yml
@@ -15,18 +15,19 @@ generator:
       fields:
         courses_list:             { label: Courses }
         password_again:           { label: "Confirm password" }
-        permissions_list:         { lable: Roles }
+        permissions_list:         { label: Permissions }
       actions: ~
       form:
         class:                    InstructorForm
         display:            
          "Instructor Details":    [first_name, middle_name, last_name, date_of_birth, gender, employment, employment_start_date, employment_end_date, is_student, current_study]
-         "Account Details":       [username, email_address, password, password_again, is_active]
+         "Access Details":        [email_address, username, password, password_again, is_active]
+         "Profile Permissions":   [permissions_list]
       filter:
         class: false
       list:
         title:                    Instructors
-        display:                  [first_name, last_name, email_address, employment, gender, _is_active, is_student]
+        display:                  [first_name, last_name, email_address, employment, gender, _is_active]
         sort:                     [gender, asc]
         batch_actions:            []
         max_per_page:			        10
