--- a/apps/frontend/modules/staff/config/generator.yml
+++ b/apps/frontend/modules/staff/config/generator.yml
@@ -20,13 +20,13 @@ generator:
       form:
         class:                    StaffForm
         display:            
-         "Staff Details":         [first_name, middle_name, last_name, date_of_birth, gender, employment, employment_start_date, employment_end_date, is_student]
+         "Staff Details":         [first_name, middle_name, last_name, date_of_birth, employment_start_date, employment_end_date, employment, gender, is_student]
          "Account Details":       [username, email_address, password, password_again, is_active]
       filter:
         class: false
       list:
         title:                    Staff
-        display:                  [first_name, last_name, email_address, employment, gender, _is_active, is_student]
+        display:                  [first_name, last_name, email_address, employment, _is_active]
         sort:                     [gender, asc]
         batch_actions:            []
         max_per_page:			        10
