--- a/apps/frontend/modules/student/config/generator.yml
+++ b/apps/frontend/modules/student/config/generator.yml
@@ -13,21 +13,20 @@ generator:
 
     config:
       fields:
-        number:              { label: "Student number" }
         password_again:      { label: "Confirm password" }
-        permissions_list:    { lable: Roles }
-
+        permissions_list:    { label: Permissions }
       actions: ~
       form:
-        class:               StudentForm
+        class:                      StudentForm
         display:            
-         "Your Personal Details":        [first_name, last_name, number, email_address, mobile_phone, country_id, state_province_id]
-         "Tutorial Enrollment Details":  [year, semester, department_1, course_1, department_2, course_2, department_3, course_3]
+         "Personal Details":        [first_name, last_name, number, number, gender, date_of_birth]
+         "Access Details":          [email_address, username, password, password_again, is_active]
+         "Profile Permissions":     [permissions_list] 
       filter:
         class: false
       list:
         title:               Students
-        display:             [first_name, last_name, email_address, number, status, gender]
+        display:             [first_name, last_name, email_address, number, gender]
         sort:                [number, asc]
         batch_actions:       []
         max_per_page:			   10
