--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1144,7 +1144,7 @@ news_item_show:
   options: { model: NewsItem, type: object }
   param:   { module: news_item, action: show }
   requirements:
-    sf_method: [get]
+    sf_method: [get] 
     
 discussion_group_show:
   url:     /discussion/group/:slug
@@ -1152,7 +1152,11 @@ discussion_group_show:
   options: { model: DiscussionGroup, type: object }
   param:   { module: discussion_group, action: show }
   requirements:
-    sf_method: [get] 
+    sf_method: [get]
+  
+discussion_group_topics:
+  url:   /discussion/group/:slug/topics
+  param: { module: discussion_group, action: topics }
     
 course_info:
   url:   /course/info
