--- a/apps/frontend/modules/default/config/view.yml
+++ b/apps/frontend/modules/default/config/view.yml
@@ -1,3 +1,3 @@
-all:  
-  stylesheets:    [landing]
+error404Success:  
+  stylesheets:    [ public.css, course.css, profile.css ]
   layout:         public
