--- a/apps/frontend/modules/profile_enroll/config/generator.yml
+++ b/apps/frontend/modules/profile_enroll/config/generator.yml
@@ -25,4 +25,4 @@ generator:
       new:
         title:               "Enroll Up"
         actions:
-          _save:             { label: "Enroll" }
+          _save:             { label: "Sign Up" }
