--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,3 +1,12 @@
+course_syllabus:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                CourseSyllabus
+    module:               course_syllabus
+    prefix_path:          /course/syllabus
+    column:               id
+    with_wildcard_routes: true
+
 profile_info:
   class: sfDoctrineRouteCollection
   options:
@@ -747,9 +756,9 @@ profile_topics:
   url: /profile/topics
   param: { module: profile, action: topics }
   
-profile_posts:
-  url: /profile/posts
-  param: { module: profile, action: posts }
+profile_activity_feeds:
+  url: /profile/activity/feeds
+  param: { module: profile, action: activityFeeds }
   
 profile_award_ajax:
   url: /profile/award/ajax
@@ -954,10 +963,6 @@ course_explorer:
 course_enroll:
   url:   /course/enroll/:course_id
   param: { module: course, action: enroll }
-  
-course_syllabus:
-  url:   /course/syllabus
-  param: { module: course, action: syllabus }
   
 course_videos:
   url:   /course/videos
